--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "postinstall": "bower install",
     
-    "cibuild": "ng test --single -run --cc && ng build --prod --no-progress",
+    "build": "ng test --single -run --cc && ng build --prod --no-progress",
 
     "update-deps": "npm update",
     "postupdate-deps": "bower update",
