--- a/package.json
+++ b/package.json
@@ -15,23 +15,10 @@
     "karma-jasmine": "^0.3.8",
     "karma-junit-reporter": "^0.4.1",
     "protractor": "^4.0.9"
-  },
-  "version": "2.24.0",
-  "dependencies": {
-    "@angular/common": "5.0.3",
-    "@angular/compiler": "5.0.3",
-    "@angular/compiler-cli": "5.0.3",
-    "@angular/core": "5.0.3",
-    "@angular/forms": "5.0.3",
-    "@angular/http": "5.0.3",
-    "@angular/platform-browser": "5.0.3",
-    "@angular/platform-browser-dynamic": "5.0.3",
-    "@angular/router": "5.0.3",
+    "@angular/cli": "1.6.4",
   },
   "scripts": {
     "postinstall": "bower install",
-    
-    "test": "ng test",
     
     "build": "ng build --prod --no-progress",
 
