--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "start": "http-server -a localhost -p 8000 -c-1 ./app",
 
     "pretest": "npm install",
+    "test": "ng test",
     "test": "karma start karma.conf.js",
     "test-single-run": "karma start karma.conf.js --single-run",
 
