--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "karma-jasmine": "^0.3.8",
     "karma-junit-reporter": "^0.4.1",
     "protractor": "^4.0.9"
-    "@angular/cli": "1.6.4",
+    "@angular/cli": "^1.6.4",
   },
   "scripts": {
     "postinstall": "bower install",
