--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "karma-firefox-launcher": "^0.1.7",
     "karma-jasmine": "^0.3.8",
     "karma-junit-reporter": "^0.4.1",
-    "protractor": "^4.0.9"
+    "protractor": "^4.0.9",
+    "@angular/core": "5.0.3",
+    "rxjs": "5.5.6",
   },
   "scripts": {
     "postinstall": "bower install",
