--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "karma-jasmine": "^0.3.8",
     "karma-junit-reporter": "^0.4.1",
     "protractor": "^4.0.9",
-    "@angular/core": "5.0.3",
-    "rxjs": "5.5.6",
+    "@angular/core": "^5.0.3",
+    "rxjs": "^5.5.6",
   },
   "scripts": {
     "postinstall": "bower install",
