--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "karma-jasmine": "^0.3.8",
     "karma-junit-reporter": "^0.4.1",
     "protractor": "^4.0.9",
-    "@angular/core": "5.0.3"
+    
+  },
+  "dependencies": {
+    "@angular/core": "5.0.3",
+    "rxjs": "5.5.6"
   },
   "scripts": {
     "postinstall": "bower install",
